namespace Data.Core.Models.Mapping
{
    public enum ComponentType
    {
        CLASS,
        METHOD,
        FIELD,
        PARAMETER
    }
}
